# split

./: .gitignore  CMakeLists.txt  README.md  run_apps_note.rtf
Source/Common/: OscProtocol.h
Source/Host/: HostEngine.cpp  HostEngine.h  HostMainWindow.cpp  HostMainWindow.h  Main.cpp
Source/IDE/: Main.cpp  MainWindow.cpp  MainWindow.h
configs/: host-config.sconfig  test.sconfig
docs/: osc_protocol.md
examples/scripts/: README.md  acid_break_architecture_178.split  amen_pressure_172.split  aphex_mutation.split  autechre_polymeter.split  reese_halftime_160.split  rimstep_oddcycle_174.split  squarepusher_jungle.split  tt_logic_math_prob.split  tt_metro_breaks.split  tt_pattern_registers.split  tt_sections_songform.split  venetian_7_8_drill.split
release/Split-macOS/Pattern IDE.app/Contents/: Info.plist
release/Split-macOS/Plugin Host.app/Contents/: Info.plist
